# iris-dataset-classification

./: Iris_dataset.ipynb  README.md  load_data.py  pyproject.toml  requirements.txt
iris_dataset_classification/: evaluate.py  prepare.py  train.py
pipelines/: ml_pipeline.py
pipelines/dags/data_cleaning_dag/: data_cleaning.py
tests/: conftest.py  test_load_data.py
tests/data/: iris_data_test.csv
